--- a/html/index.html
+++ b/html/index.html
@@ -152,6 +152,6 @@
         </section>
     </footer>
     <script src="https://kit.fontawesome.com/43625ab5ce.js" crossorigin="anonymous"></script>
-    <script src="/js/index.js"></script>
+    <script src="../js/index.js"></script>
 </body>
 </html>
