se modifica el menu y se distancian las fichas 5vh

--- a/html/index.html
+++ b/html/index.html
@@ -41,7 +41,7 @@
                 </ul>
             </div>
             <div class="menuImagen">
-                <i class="fas fa-bars"></i>
+                <p id="menuHambur" class="fas fa-bars"></p>
             </div>
             <div class="menuMobile inactivo">
                 <ul>
